# Aura_hex

./: README.md  cleanup  setup.sh
src/aura/: CMakeLists.txt  cascade.xml  package.xml
src/aura/include/aura/: controller.h  image_process.h  qr_handler.h  trajectory.h
src/aura/launch/: zbar.launch
src/aura/scripts/: controller.py  sample.py  test.py  test2.py  test3.py
src/aura/src/: controller.cpp  image_process.cpp  qr_handler.cpp  test.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  trajectory.cpp
src/bebop_description/launch/: description_spawn.launch
